--- a/templates/students/postAssignment.html
+++ b/templates/students/postAssignment.html
@@ -127,8 +127,8 @@
                                         class="btn btn-danger flaticon-delete-4"></span></a></td>
                             <td class="text-center"><button type="button" data-toggle="modal" data-target="#tutorModal{{assing.sno}}"
                                     class="btn btn-info">View</button></td>
-                            <td class="text-center"><a href=""><span
-                                        class="btn btn-success">Extend</span></a></td>
+                            <td class="text-center"><a href="">
+                                <span class="btn btn-success">Extend</span></a></td>
                         </tr>
 
                         <!-- view box -->
@@ -153,8 +153,8 @@
                                                     <span class="ml-1">{{assing.forclass}}</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-6 col-12 mt-2">
-                                                    <b>Requirement:</b>
-                                                    <span class="ml-1">{{assing.requirement}}</span>
+                                                    <b>Decription:</b>
+                                                    <span class="ml-1">{{assing.description}}</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-6 col-12 mt-2">
                                                     <b>Timestamp:</b>
