--- a/templates/fees/archiveFeeList.html
+++ b/templates/fees/archiveFeeList.html
@@ -230,7 +230,7 @@
               <div class="row">
                 <!-- Grid column -->
                 <div class="col-md-8">
-                  <h2 style="color: rgb(0, 0, 0 );">List of Enrolled Courses with Fees</h2>
+                  <h2 style="color: rgb(0, 0, 0 );">List of Archieved Enrolled Courses with Fees</h2>
                 </div>
         
                 <div class="col-md-4">
@@ -292,7 +292,7 @@
             <div class="card-header" style="background: none;">
               <div class="row">
                 <div class="col-xl-12 col-md-12 col-12">
-                  <h2>No Enrolled Courses with Fees</h2>
+                  <h2>No Archieved Enrolled Courses with Fees</h2>
                 </div>
               </div>
             </div>
