--- a/templates/fees/addFees.html
+++ b/templates/fees/addFees.html
@@ -32,7 +32,7 @@
             <div class="mx-2 row" id="INSTBATCH">
                 <div class="col">
                     <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
-                    <select id="forclass" name='forclass' style="width: 100%;"
+                    <select id="forclass" name='forclass' style="width: 100%;" required
                         class="js-example-basic-single form-control" onchange="selectclass()">
                         <option class="form-control" selected disabled value="">Select Class</option>
                         {% for i in classes %}
@@ -42,19 +42,16 @@
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-                    <select id="courseName" name="courseName" style="width: 100%"
+                    <select id="courseName" name="courseName" style="width: 100%" onchange="selectcourse()" required
                         class="js-example-basic-single form-control">
                         <option class="form-control form-control-lg" selected disabled value="">Select Course</option>
                     </select>
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong>Teaching Type <span class="red">*</span></strong></label>
-                    <select id="teachingtype" name="teaching" style="width: 100%;"
+                    <select id="teachingtype" name="teaching" style="width: 100%;" required
                         class="js-example-basic-single form-control">
-                        <option class="form-control" selected disabled value="">Select teaching-type</option>
-                        {% for i in teach %}
-                        <option class="form-control" value="{{i.teachType}}">{{i.teachType}}</option>
-                        {% endfor %}
+                        <option class="form-control" selected disabled value="">Select Teach Type</option>
                     </select>
                 </div>
             </div>
@@ -63,22 +60,22 @@
 
                 <div class="col">
                     <label for="validationCustom01"><strong> Course Fees <span class="red">*</span></strong></label>
-                    <input class="form-control finalcalc" type='text' id="feeamt" name='feeamt' placeholder="Course Fee" required>
+                    <input type="number" min="0" class="form-control finalcalc" id="feeamt" name='feeamt' placeholder="Course Fee" required>
                 </div>
                 <div class="col">
                     <label for="validationCustom01"><strong> Tax </strong></label>
-                    <input class="form-control finalcalc" type='text' id="tax" name='tax' placeholder="Tax %" required /><br />
+                    <input class="form-control finalcalc" type="number" min="0" max="100" id="tax" name='tax' placeholder="Tax %" required /><br />
                 </div>
 
                 <div class="col">
                     <label for="validationCustom01"><strong>Final <span class="red">*</span></strong></label>
-                    <input class="form-control" type='text' id="final" name='final' readonly>
+                    <input class="form-control" type='text' id="final" name='final' readonly required>
                     <div class="invalid-feedback">
                         Select a valid Time!
                     </div>
                 </div>
             </div>
-            <div class="mx-2 row">
+            <div class="mx-2 row mt-4">
                 <div class="col-md-4 mb-3">
                     <label for="validationCustom01"><strong>Installment<span class="red">*</span></strong></label>
                     <div>
@@ -96,43 +93,33 @@
                 <div class="col-md-4 mb-3">
                     <label for="validationCustom01" for="chargeType1"><strong>Charge Type <span
                                 class="red">*</span></strong></label>
-                    <div class="col">
-                        <label for="chargeType1" class="control-label">Amount </label> &nbsp;&nbsp;&nbsp;&nbsp;
-                        <input id="chargeType1" type="radio" name="chargeType" value="1">
-                        <label for="chargeType2" class="control-label">Percent</label>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <input id="chargeType2" type="radio" name="chargeType" value="0">
-                    </div>
+                        <select class="form-control" name="chargeType" style="width: 100%" required>
+                        <option class="form-control form-control-lg" selected value="1">Amount</option>
+                        <option class="form-control form-control-lg" value="0">Percent</option>
+                        </select>
                 </div>
             </div>
             <div class=" mx-2 row mt-4">
-                <div id="echarges" class="input-group form-group" style="margin-left: 20px;">   
-                    <!-- <label class="control-label col-sm-4">Extra Charges (Each Installment)<span class="text-danger">*</span></label> -->
+                <div id="echarges" class="input-group form-group" style="margin-left: 20px;">
                     <label for="validationCustom01" for="chargeType2"><strong>Extra Charges (Each Installment) <span class="red">*</span></strong></label>
-                    <!-- <input type="text" class="form-control col-sm-1" id="echarge1" name='echarge' placeholder="1" disabled="disabled"> -->
-                    <input type="text" class="form-control col-sm-1" id="echarge2" name='echarge' placeholder="2" disabled="disabled" value="2">
-                    <input type="text" class="form-control col-sm-1" id="echarge3" name='echarge' placeholder="3" disabled="disabled" value="3">
-                    <input type="text" class="form-control col-sm-1" id="echarge4" name='echarge' placeholder="4" disabled="disabled" value="4">
-                    <input type="text" class="form-control col-sm-1" id="echarge5" name='echarge' placeholder="5" disabled="disabled" value="5">
-                    <input type="text" class="form-control col-sm-1" id="echarge6" name='echarge' placeholder="6" disabled="disabled" value="6">
+                    <input type="number" min="0" class="form-control col-sm-1" id="echarge2" name='echarge' placeholder="2" disabled="disabled">
+                    <input type="number" min="0" class="form-control col-sm-1" id="echarge3" name='echarge' placeholder="3" disabled="disabled">
+                    <input type="number" min="0" class="form-control col-sm-1" id="echarge4" name='echarge' placeholder="4" disabled="disabled">
+                    <input type="number" min="0" class="form-control col-sm-1" id="echarge5" name='echarge' placeholder="5" disabled="disabled">
+                    <input type="number" min="0" class="form-control col-sm-1" id="echarge6" name='echarge' placeholder="6" disabled="disabled">
                 </div>
-
-
-
-
-               
-
 
                 <div class="col-md-4 mb-3 ">
                     <label for="validationCustom01" for="chargeType2"><strong>Discount <span
                                 class="red">*</span></strong></label>
-                    <input class="form-control" type="number" id="discount" name='feeDisc' placeholder="Discount (%)" />
+                    <input class="form-control" type="number" min="0" max="100" id="discount" name='feeDisc' placeholder="Discount (%)" />
 
                 </div>
 
                 <div class="col-md-4 mb-3 ">
                     <label for="validationCustom01" for="chargeType2"><strong>Validity <span
                                 class="red">*</span></strong></label>
-                    <input class="form-control" type="Date" id="validity" name='discValidity' placeholder="Val" />
+                    <input class="form-control" type="Date" id="validity" name='discValidity' placeholder="Val" disabled />
 
                 </div>
 
@@ -147,50 +134,88 @@
 
 
     <script>
-        function checkbox() {
-            var value = $("#negativecheck").is(":checked");
-             negative = document.getElementById("negative");
-             var output;
-             if (value) {
-                output = `<input type="number" class="mt-2 form-control"  placeholder="Enter Negative Marks" name="negative_marks" value="0" required />
-                 <div class="invalid-feedback">
-                   Enter a valid No.
-                 </div>`;
-            } else {
-                output = "";
-            }
-            negative.innerHTML = output;
+        
+    $('#discount').on('change',()=>{
+
+        if ($('#discount').val()==0){
+            $('#validity').prop('disabled', true);
+            $('#validity').prop('required', false);
+            $('#validity').val(null);
         }
+        
+        else{
+            $('#validity').prop('disabled', false);
+            $('#validity').prop('required', true);
+        }
+    })
         // In your Javascript (external .js resource or <script> tag)
       
+            function selectclass() {
+      var selected = $("#forclass").val();
+      $.ajax({
+        url: "{% url 'findCourse' %}",
+        data: {
+          forclass: selected,
+        },
+        success: function (data) {
+          courses = data.courses;
+          $("#courseName").empty().trigger("change");
+          var newOption = new Option(
+            "Select Course",
+            "",
+            false,
+            false
+          );
+          $("#courseName").append(newOption).trigger("change");
+          for (i = 0; i < courses.length; i++) {
+            var newOption = new Option(
+              courses[i][1],
+              courses[i][0],
+              false,
+              false
+            );
+            $("#courseName").append(newOption).trigger("change");
+          }
+        },
+      });
+    }
 
-        function selectclass() {
-            var selected = $("#forclass").val();
-            $.ajax({
-                url: "{% url 'findbatch' %}",
-                data: {
-                    forclass: selected,
-                },
-                success: function (data) {
-                    courses = data.courses;
-                    $("#courseName").empty().trigger("change");
-                    for (i = 0; i < courses.length; i++) {
-                        var newOption = new Option(
-                            courses[i][1],
-                            courses[i][0],
-                            false,
-                            false
-                        );
-                        $("#courseName").append(newOption).trigger("change");
-                    }
-                },
-            });
+    function selectcourse() {
+    var selected_class = $("#forclass").val();
+    var selected_course = $("#courseName option:selected").text();
+
+    $.ajax({
+        url: "{% url 'findTeaching' %}",
+            data: {
+                forclass: selected_class,
+                course: selected_course
+            },
+            success: function (data) {
+                teaching = data.teaching;
+
+        $("#teachingtype").empty().trigger("change");
+
+        var newOption = new Option(
+                    "Select Teach Type",
+                    "",
+                    false,
+                    false
+                );
+        $("#teachingtype").append(newOption).trigger("change");
+
+        for (i = 0; i < teaching.length; i++) {
+                    var newOption = new Option(
+                        teaching[i],
+                        teaching[i],
+                        false,
+                        false
+                    );
+          $("#teachingtype").append(newOption).trigger("change");
         }
-
-        $(window).on('pageshow', () => {
-            var frm = $('#frm');
-            frm[0].reset();
-        });
+        console.log(teaching)
+      },
+    });
+  }
     </script>
    
 
@@ -198,61 +223,23 @@
 
 
    <script>
+    
+    $("#no_of_installment").on("change", function() {
+                    $("#echarges input").prop("disabled",true);
+                    var selected = $("#no_of_installment option:selected").text();
+                    let j = parseInt(selected) + 1;
+                    for (let i = j; i <= 6; i++)
+                    {
+                        $(`#echarge${i}`).val('');
+                    }
 
-    console.log("this is jquery")
-        function Enableddl(install)
-        {
-            var ddl=document.getElementById("no_of_installment");
-            ddl.disabled=install.checked ? false : true;
-            if(!ddl.disabled)
-            {
-                ddl.focus();
-            }
-        }
+                    for (let i = 2; i <= selected; ++i)
+                    {
+                        $(`#echarge${i}`).prop( "disabled", false );
+                    }
+
+                });
     
-        $(function() {
-            $("#no_of_installment").on("change", function() {
-                $("#echarges input").prop("disabled",true);
-                var selected = $("option:selected", this).map(function() {
-                    return $(this).text();
-                }).toArray();
-                var i;
-                for (i = 0; i < selected.length; ++i)
-                {
-                    if(selected[i]==2)
-                    // {
-                    //     $('#echarge1').prop( "disabled", false );
-                    // }
-                    // else if(selected[i]==2)
-                    {
-                        $('#echarge2').prop( "disabled", false );
-                    }
-                    else if(selected[i]==3)
-                    {
-                        $('#echarge3').prop( "disabled", false );
-                    }
-                    else if(selected[i]==4)
-                    {
-                        $('#echarge4').prop( "disabled", false );
-                    }
-                    else if(selected[i]==5)
-                    {
-                        $('#echarge5').prop( "disabled", false );
-                    }
-                    else if(selected[i]==6)
-                    {
-                        $('#echarge6').prop( "disabled", false );
-                    }
-                }
-            });
-        });
-    
-    
-        $(document).ready(function() {
-            $('#no_of_installment').multiselect({
-                includeSelectAllOption: true,
-            });
-        });
     
         $(".finalcalc").on("change",function(){
             var a,b,c;
@@ -265,6 +252,11 @@
             event.preventDefault()
         });
     
+        $(document).on('ready', () => {
+        if (performance.navigation.type == 2) {
+            location.reload();
+        }
+    });
     </script>
 
 
