--- a/templates/fees/searchFee.html
+++ b/templates/fees/searchFee.html
@@ -54,7 +54,7 @@
                 <form action="/searchFee/" method="POST">{% csrf_token %}
                     <div class="form-group">
                         <div class="col-lg-5">
-                            <input type="text" class="form-control" name='srh' placeholder="Enter Teaching Type or Course Enrolled or Fee Duration" required>
+                            <input type="text" class="form-control" name='srh' placeholder="Enter Teaching Type or Course Enrolled or Fee Duration">
                         </div>
                         <br>
                         <label class="col-lg-2">
