--- a/templates/students/postTution.html
+++ b/templates/students/postTution.html
@@ -41,7 +41,7 @@
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Course</label>
                             <select id="subject" name="subject" class="custom-select form-control">
-                                <option disabled selected>Subject</option>
+                                <option disabled selected value="">Course</option>
                             </select>
                         </div>
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
@@ -49,6 +49,7 @@
                             <select name="tm" class="custom-select form-control" required="required">
                                 <option disabled selected value>Teaching Mode</option>
                                 <option value="Online Tutor">Online Tutor</option>
+                                <option value="Group Tutor">Group Tutor</option>
                                 <option value="Institute">Institute</option>
                                 <option value="Home Tutor">Home Tutor</option>
                             </select>
@@ -64,7 +65,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-3" style="color:black;">No. of Sessions</label>
-                            <input type="number" class="form-control my-2" id="monthlydigit" style="-moz-appearance: textfield;" min="0" name="monthlydigit" placeholder="No. of sessions">
+                            <input type="number" class="form-control my-2" id="monthlydigit" style="-moz-appearance: textfield;" min="0" name="monthlydigit" placeholder="No. of sessions" required>
                         </div>  
                         
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
@@ -78,7 +79,7 @@
                         
                         <div class="col-md-6 col-lg-4 col-12 input-group form-group">
                             <label class="control-label col-sm-5 col-5 mt-2" style="color:black;">Prefered Gender</label>
-                            <select id="gp" name="gp" class="custom-select form-control" required="required">
+                            <select id="gp" name="gp" class="custom-select form-control">
                                 <option disabled selected value>Prefered Gender</option>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
@@ -135,10 +136,7 @@
                                 <td>{{tution.budgetVal}}</td>
                                 <td>{{tution.numberOfSessions}}</td>
                                 <td class="text-center">
-                                    <a href="">
-                                        <span class="btn btn-success">Update
-                                        </span>
-                                    </a>
+                                   
                                     <a class="btn btn-danger" href="{% url 'Delete_Tution' tution.sno %}">
                                         <span class="flaticon-delete-4">
                                         </span>
@@ -223,10 +221,12 @@
     }
     className.innerHTML = classes
 
+
+
     function subjects() {
         var className = document.getElementById("className").value
         var subject = document.getElementById("subject")
-        html = "<option disabled selected>Subject</option>"
+        html = "<option disabled selected>Course</option>"
         class_subjects = jsondata[`${className}`]
         for (let index = 0; index < class_subjects.length; index++) {
             const element = class_subjects[index];
