--- a/templates/teacher/enrolledTutors.html
+++ b/templates/teacher/enrolledTutors.html
@@ -62,7 +62,7 @@
                                 <select id="subject" name="subject"
                                     class="custom-select form-control w-100 col-md-7 col-7" placeholder="Subject">
                                     {% if prefill.subject %}
-                                    <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
+                                    <option selected value="{{prefill.subject}}">{{prefill.subject}}</option>
                                     {% else %}
                                     <option disabled selected value="">Subject</option>
                                     {% endif %}
@@ -70,13 +70,14 @@
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 mt-2 row">
                                 <label class="control-label col-sm-3 col-md-5 col-5 mt-3" style="display:block; color:black;">Teaching Mode</label>
-                                <select name="tm" class="custom-select form-control w-100 col-md-7 col-7" required="required">
+                                <select name="tm" class="form-control my-2 w-100 col-md-7 col-7" required="required">
                                     <option disabled selected value>Teaching Mode</option>
                                     <option value="Online Tutor">Online Tutor</option>
+                                    <option value="Group Tutor">Group Tutor</option>
                                     <option value="Institute">Institute</option>
                                     <option value="Home Tutor">Home Tutor</option>
                                 </select>
-                            </div>
+                            </div>  
 
 
                             <div class="col-lg-12 col-md-12 col-12 d-flex justify-content-center">
@@ -478,7 +479,7 @@
     var className = document.getElementById("className")
     var jsondata = {{ jsonLocalData| safe}}
     var prefillclass = "{{prefill.class}}"
-    var prefillCourse = "{{prefill.course}}"
+    var prefillSubject = "{{prefill.subject}}"
     const keys = Object.keys(jsondata);
 
     if (prefillclass) {
@@ -495,9 +496,9 @@
     }
     className.innerHTML = classes
 
-    if(prefillCourse!=''){
+    if(prefillSubject!=''){
         subjects()
-        $(`#subject option[value=${prefillCourse}]`).prop('selected',true)
+        $(`#subject option[value=${prefillSubject}]`).prop('selected',true)
     }
 
     function subjects() {
