--- a/templates/accounts/loginAll.html
+++ b/templates/accounts/loginAll.html
@@ -131,7 +131,7 @@
                         <img alt="logo" src="{% static 'assets/img/1.png' %}" class="theme-logo">
                     </div>
                     <div class="col-md-12">
-                        <div class="input-group form-group">
+                        <div class="input-group form-group justify-content-center">
                                 <select hidden name="type" class="form-control form-control-lg mr-2" style="border-radius: 25px; text-align: center;">
                                     <option {% if prefil.type == "Institute" %}selected {% endif %} value="Institute">Institute</option>
                                     <option {% if prefil.type == "Teacher" %}selected {% endif %} value="Teacher">Teacher</option>
@@ -139,12 +139,12 @@
                                 </select>
                         </div>
                         <div class="input-group form-group">
-                                <label class="control-label col-sm-4">Username<span class="text-danger">*</span></label>
+                                <label class="control-label col-sm-4 pt-3">Username<span class="text-danger">*</span></label>
                                 <input style="border-radius: 25px; text-align: center;" type="text" class="form-control form-control-lg" name='username'
                                     placeholder="Username" value="{{prefil.username}}" required>
                         </div>
                         <div class="input-group form-group">
-                            <label class="control-label col-sm-4"> Password<span class="text-danger">*</span></label>
+                            <label class="control-label col-sm-4 pt-3"> Password<span class="text-danger">*</span></label>
                             <input style="border-radius: 25px; text-align: center;"  type="password" name='password' class="form-control form-control-lg pwd"
                                 value="{{ prefil.password }}" placeholder="Password" required pattern=".{6,20}" title="At least 6 charcters">
                             <div class="input-group-append">
@@ -192,7 +192,7 @@
                                 </select>
                             </div>
                             <div class="input-group form-group">
-                                <label class="control-label col-sm-4">Username<span class="text-danger">*</span></label>
+                                <label class="control-label col-sm-4 pt-1">Username<span class="text-danger">*</span></label>
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user"></i></span>
                                 </div>
@@ -270,13 +270,13 @@
             div.btn {
                 display: inline-block;
                 cursor: pointer;
-                border-radius : 25px;
+                border-radius : 5px;
 
             }
             div.btn.on {
                 background-color: #e6e2d5;
                 color: #403e37;
-                border-radius : 25px;
+                border-radius : 5px;
             }
         </style>
         <script type="text/javascript">
