--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -125,7 +125,7 @@
                 <div class="col-md-12 text-center mb-4">
                     <img src="{% static "assets/img/1.png" %}" alt="">
                 </div>
-                <div class="input-group form-group">
+                <div class="input-group form-group justify-content-center">
                     <select hidden name="type" class="form-control form-control-lg mr-2" style="border-radius: 25px; text-align: center;">
                         <option {% if prefil.type == "Institute" %}selected {% endif %} value="Institute">Institute</option>
                         <option {% if prefil.type == "Teacher" %}selected {% endif %} value="Teacher">Teacher</option>
@@ -133,18 +133,18 @@
                     </select>
                 </div>
                 <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Username<span class="text-danger">*</span></label>
+                    <label class="control-label col-sm-4 pt-3">Username<span class="text-danger">*</span></label>
                     <input style="border-radius: 25px; text-align: center;" type="text" class="form-control form-control-lg" name='username'
                         placeholder="Username" value="{{prefil.username}}" required>
                 </div>
                 
                 <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Email Id<span class="text-danger">*</span></label>
+                    <label class="control-label col-sm-4 pt-3">Email Id<span class="text-danger">*</span></label>
                     <input style="border-radius: 25px; text-align: center;" type="email" class="form-control form-control-lg" name='email'
                         placeholder="Email Address" value="{{prefil.email}}" required>
                 </div>
                 <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Set Password<span class="text-danger">*</span></label>
+                    <label class="control-label col-sm-4 pt-1">Set Password<span class="text-danger">*</span></label>
                     <input style="border-radius: 25px; text-align: center;" type="password" name='password' class="form-control form-control-lg pwd"
                         value="{{ prefil.password }}" placeholder="Password" required pattern=".{6,20}" title="At least 6 charcters">
                         <div class="input-group-append">
@@ -152,7 +152,7 @@
                         </div>
                 </div>
                 <div class="input-group form-group">
-                    <label class="control-label col-sm-4">Phone Number<span class="text-danger">*</span></label>
+                    <label class="control-label col-sm-4 pt-1">Phone Number<span class="text-danger">*</span></label>
                     <input style="border-radius: 25px; text-align: center;" type="tel" class="form-control form-control-lg" name='phone'
                         placeholder="Phone Number" value="{{ prefil.phone }}" maxlength="10" pattern="\d{10}"
                         type="number" required>
@@ -241,13 +241,13 @@
             div.btn {
                 display: inline-block;
                 cursor: pointer;
-                border-radius : 25px;
+                border-radius : 5px;
 
             }
             div.btn.on {
                 background-color: #e6e2d5;
                 color: #403e37;
-                border-radius : 25px;
+                border-radius : 5px;
             }
         </style>
         <script type="text/javascript">
